Fix row children becoming too wide

--- a/assets/stylesheets/alchemy-widgets.scss
+++ b/assets/stylesheets/alchemy-widgets.scss
@@ -11,7 +11,7 @@ alchemy-widgets-column {
 	}
 
 	> * {
-		flex: 1 auto;
+		flex: 1;
 	}
 }
 
